--- a/server/grails-app/i18n/messages.properties
+++ b/server/grails-app/i18n/messages.properties
@@ -66,7 +66,10 @@ favorito.rutaViaje.faveoSuRV=No podes marcar como favorita a una ruta de viaje p
 favorito.rutaViaje.unique=Ya marcaste como favorita a {2}
 
 autorizacion.rutaViaje.seAutorizoASiMismo=No te podes autorizar a ti mismo
-autorizacion.usuario.unique=Ya autorizaste a {2}
-autorizacion.usuario.autorizoAUnNoSeguidor={2} no te sigue
+autorizacion.usuario.unique=El usuario {2} fue autorizado mas de una vez
+autorizacion.usuario.noSeguidor={2} no te sigue
 
-rutaViaje.sitios.vacio=La lista de sitios de la ruta de viaje no puede ser vacía
+rutaViaje.sitios.vacio=La lista de sitios de la ruta de viaje no puede ser vacia
+rutaViaje.autorizaciones.usuario.noExiste=Usuario(id: {0}) no existe
+
+usuario.username.matches.invalid=El nombre de usuario puede contener numeros, letras y puntos unicamente
