Resolve #3 Agregado vista de rutas de viajes

--- a/server/grails-app/i18n/messages.properties
+++ b/server/grails-app/i18n/messages.properties
@@ -68,8 +68,8 @@ favorito.rutaViaje.unique=Ya marcaste como favorita a {2}
 autorizacion.rutaViaje.seAutorizoASiMismo=No te podes autorizar a ti mismo
 autorizacion.usuario.unique=El usuario {2} fue autorizado mas de una vez
 autorizacion.usuario.noSeguidor={2} no te sigue
+autorizacion.usuario.noExiste=Usuario(id: {0}) no existe
 
 rutaViaje.sitios.vacio=La lista de sitios de la ruta de viaje no puede ser vacia
-rutaViaje.autorizaciones.usuario.noExiste=Usuario(id: {0}) no existe
 
 usuario.username.matches.invalid=El nombre de usuario puede contener numeros, letras y puntos unicamente
