Varios issues y breakings changes
- #25, #14, #13 terminadas del lado del servidor.
- #15  terminada del lado del servidor (breaking change).
- Close #22
- Cambiado nombre de atributo "creador" por "usuario" en json de viaje
(breaking change).
- Estandarizado los favoritos, autorizaciones y seguimientos para
usuarios y viajes.
- Actualizado a Grails 3.2.8

--- a/server/grails-app/i18n/messages.properties
+++ b/server/grails-app/i18n/messages.properties
@@ -59,17 +59,13 @@ typeMismatch=Property {0} is type-mismatched
 seguimiento.seguido.seSigueASiMismo=No te podes seguir a ti mismo
 seguimiento.seguido.unique=Ya seguis a {2}
 
-compartido.rutaViaje.compartioSuRV=No podes compartir una ruta de viaje propia
-compartido.rutaViaje.unique=Ya compartiste a {2}
+favorito.viaje.unique=Ya marcaste como favorita a {2}
 
-favorito.rutaViaje.faveoSuRV=No podes marcar como favorita a una ruta de viaje propia
-favorito.rutaViaje.unique=Ya marcaste como favorita a {2}
-
-autorizacion.rutaViaje.seAutorizoASiMismo=No te podes autorizar a ti mismo
-autorizacion.usuario.unique=El usuario {2} fue autorizado mas de una vez
+autorizacion.viaje.autorizoASiMismo=No te podes autorizar a ti mismo
+autorizacion.usuario.unique=El usuario {2} ya fue autorizado para este viaje
 autorizacion.usuario.noSeguidor={2} no te sigue
 autorizacion.usuario.noExiste=Usuario(id: {0}) no existe
 
-rutaViaje.sitios.vacio=La lista de sitios de la ruta de viaje no puede ser vacia
+viaje.sitios.vacio=La lista de sitios del viaje no puede ser vacia
 
 usuario.username.matches.invalid=El nombre de usuario puede contener numeros, letras y puntos unicamente
