--- a/server/grails-app/i18n/messages.properties
+++ b/server/grails-app/i18n/messages.properties
@@ -64,7 +64,7 @@ favorito.viaje.unique=Ya marcaste como favorita a {2}
 autorizacion.viaje.autorizoASiMismo=No te podes autorizar a ti mismo
 autorizacion.usuario.unique=El usuario {2} ya fue autorizado para este viaje
 autorizacion.usuario.noSeguidor={2} no te sigue
-autorizacion.usuario.noExiste=Usuario(id: {0}) no existe
+autorizacion.usuario.notFound=Usuario({0}) no existe
 
 viaje.sitios.vacio=La lista de sitios del viaje no puede ser vacia
 
